--- a/src/components/recipe-page/recipe.style.css
+++ b/src/components/recipe-page/recipe.style.css
@@ -21,7 +21,8 @@
 }
 
 .navbar-v2 {
-    background-color: white;
+    background-color: #3f51b5;
+    vertical-align: center;
 }
 
 .jumbo-recipe {
