Juan and Sindhu : Fixing a few bugs

--- a/src/components/recipe-page/recipe.style.css
+++ b/src/components/recipe-page/recipe.style.css
@@ -32,7 +32,7 @@
     border-top-color: white;
     border-left-color: white;
     border-right-color:white;
-
+    color: black;
 }
 
 .make-wider {
