--- a/src/components/recipe-page/recipe.style.css
+++ b/src/components/recipe-page/recipe.style.css
@@ -68,6 +68,8 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    max-width: 800px;
+    max-height: 600px;
 }
 
 .list-spacing {
