--- a/src/components/profile/profile-page.style.css
+++ b/src/components/profile/profile-page.style.css
@@ -2,6 +2,15 @@
     transform: translateY(5rem)
 }
 
+.profile-review-padding {
+    margin-bottom: -30px;
+}
+
+html,body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .cover {
     background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
     background-size: cover;
