Sindhu and Juan : styling changes

--- a/src/components/profile/profile-page.style.css
+++ b/src/components/profile/profile-page.style.css
@@ -16,3 +16,8 @@ html,body {
     background-size: cover;
     background-repeat: no-repeat
 }
+
+.profile-button {
+    white-space: nowrap;
+    margin-top: 5px;
+}
