Sindhu and Juan : profile page changes

--- a/src/components/profile/profile-page.style.css
+++ b/src/components/profile/profile-page.style.css
@@ -21,3 +21,11 @@ html,body {
     white-space: nowrap;
     margin-top: 5px;
 }
+
+.profile-followers-list {
+    margin-top: 60px;
+}
+
+.profile-followers-sublist {
+    padding-left: 8px;
+}
